# Django-restAPI-example

./: NOTIFY_ENGINE_SETUP.md  main.py  pyproject.toml
core/: .gitignore  db.sqlite3
core/API/: urls.py
core/API/v1/: urls.py
core/API/v2/: urls.py  views.py
core/base/: admin.py  models.py  serializers.py  views.py
core/base/migrations/: 0001_initial.py  0002_alter_person_address.py  0003_gender.py  0004_person_sex.py  0005_alter_person_address_alter_person_sex.py  0006_alter_person_address_alter_person_unique_together_and_more.py
core/core/: settings.py  urls.py
core/notify_engine/: DEVELOPER_GUIDE.md  MODULE_REFERENCE.md  admin.py  apps.py  crm_models.py  filters.py  models.py  serializers.py  tests_api.http  urls.py  views.py
core/notify_engine/migrations/: 0001_initial.py  0002_enquiry_alter_emaillog_options_and_more.py
core/notify_engine/services/: __init__.py  engine.py  pdf_generator.py  queue.py  recipient.py  tag_resolver.py
